syntax = "proto3";

service Cat {
  rpc GetMyCat (GetMyCatMessage) returns (MyCatResponse) {}
}

message GetMyCatMessage {
  string target_cat = 1;
}

message MyCatResponse {
  string name = 1;
  string kind = 2;
}

service Uploader {
  rpc upload (UploadFileMessage) returns (UploadFileResponce) {}
}

message UploadFileMessage {
  string file_name = 1;
  bytes content = 2;
}

message UploadFileResponce {
  UploadStatusCode code = 1;
  string message = 2;
}

enum UploadStatusCode {
  Unknown = 0;
  Ok = 1;
  Failed = 2;
}
